Extend User model with UserProfile that contain faculty attr. Route basic url and prepare View for singup api in api app

--- a/manage/templates/manage/display.html
+++ b/manage/templates/manage/display.html
@@ -79,6 +79,7 @@
     </script>
     <script>
         function onStatusChange(e) {
+            // TODO : Make an api to update database value
             console.log($(e).data('atvcode'));
 
         }
