--- a/client/templates/client/home.html
+++ b/client/templates/client/home.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
+    {%if user.is_authenticated%}
+    LOGGED IN !!!
+    <form id="logout" action="{%url 'logout'%}" method="POST">
+        <input type="submit" value="logout">
+    </form>
+    {%else%}
 
+    <p> Nope not in</p>
+    {%endif%}
     <h1>sign up</h1>
     <pre id="signup-response"></pre>
     <form id="signup" action="{%url 'signup'%}" method="POST">
@@ -26,12 +34,28 @@
     </form>
     <hr>
     <h1>sign in</h1>
+    <form id="login" action="{%url 'login'%}" method="POST">
+        <label for="student_id">student_id</label>
+        <input type="text" name="student_id">
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+    <hr>
+    <h1>Add code</h1>
+    <form id="add-code" action="{%url 'addcode'%}" method="POST">
+        <label for="code">code</label>
+        <input type="text" name="code">
+        <br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
+    const logout_form = $('#logout')
+    const login_form = $('#login')
+    const add_code_form = $('#add-code')
+
     const signup_form = $('#signup')
-
-
     signup_form.on('submit', (e) => {
         e.preventDefault()
         $.post(signup_form.attr('action'), signup_form.serialize(), (response) => {
@@ -39,6 +63,18 @@
             console.log(response);
 
         })
+
+    })
+    login_form.on('submit', (e) => {
+        e.preventDefault()
+        $.post(login_form.attr('action'), login_form.serialize(), (response) => {
+            console.log(response);
+        })
+
+    })
+    logout_form.on('submit', (e) => {
+        e.preventDefault()
+        $.post(logout_form.attr('action'))
 
     })
 </script>
