--- a/manage/templates/manage/create.html
+++ b/manage/templates/manage/create.html
@@ -5,13 +5,42 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
+
 </head>
 
 <body>
+  <nav class="nav-wraper red">
+    <div class="container">
+      <a href="#" class="brand-lo">College Club Manager</a>
+      <a href="#" class="sidenav-trigger" data-target="mobile-links">
+        <i class="material-icons">menu</i>
+      </a>
+      <ul class="right hide-on-med-and-down">
+        <a href="#" data-target="sideNavi" class="sidenav-trigger"><input class="material-icons"></i></a>
+        <li class="tab">
+          <a class="nav-item nav-link active navbar-center" href="{% url 'create'%}">สร้างโค้ด</a>
+        </li>
+        <li class="tab">
+          <a class="nav-item nav-link" href="{% url 'display'%}">เช็คสถานะโค้ด</a>
+        </li>
+        <li class="tab"><a class="nav-item nav-link" href="#">ข่าวสาร</a></li>
+        <li class="tab">
+          <a class="nav-item nav-link" href="#">การตั้งค่า</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <ul class="sidenav" id="mobile-links">
+    <li><a href="{% url 'create'%}">สร้างโค้ด</a></li>
+    <li><a href="{% url 'display'%}">เช็คสถานะโค้ด</a></li>
+    <li><a href="#">ข่าวสาร</a></li>
+    <li><a href="#">การตั้งค่า</a></li>
+  </ul>
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,16 +54,16 @@
 
       </div>
     </div>
-  </nav>
+  </nav> -->
   <section name="code" class=" bg-light p-5 m-0">
     <p class="lead text-muted">สร้างโค้ดลงฐานข้อมูล</p>
     <form action="{%url 'create_code'%}" method="post" id="code-form" class="row  justify-content-center">
       <div class="mt-3 col-8">
-        <label for="atvcode">กิจกรรม</label>
-        <!-- <input type="text" class="form-control" name="atvcode"> -->
-        <select name="atvcode">
+        <label for="atvname">กิจกรรม</label>
+        <!-- <input type="text" class="form-control" name="atvname"> -->
+        <select name="atvname">
           {%for data in datas %}
-          <option value="{{data.atvcode}}">{{data.name}}</option>
+          <option value="{{data.atvname}}">{{data.atvname}}</option>
           {%endfor%}
 
         </select>
@@ -71,13 +100,10 @@
   <section name="activity" class=" p-5 m-0">
     <p class="lead text-muted">สร้างกิจกรรมลงฐานข้อมูล</p>
     <form action="{%url 'create_activity'%}" method="post" id="activity-form" class="row  justify-content-center">
+
       <div class="mt-3 col-4">
-        <label for="atvcode">รหัสกิจกรรม</label>
-        <input type="text" class="form-control" name="atvcode">
-      </div>
-      <div class="mt-3 col-4">
-        <label for="name">ชื่อกิจกรรม</label>
-        <input type="text" class="form-control" name="name">
+        <label for="atvname">ชื่อกิจกรรม</label>
+        <input type="text" class="form-control" name="atvname">
       </div>
       <div class="w-100"></div>
       <div class="mt-3 col-4">
@@ -96,13 +122,8 @@
     </form>
   </section>
 
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     const code_form = $('#code-form')
     const activity_form = $('#activity-form')
@@ -115,9 +136,12 @@
         data: code_form.serialize(),
         success: (data) => {
           alert('create code : success')
+          window.location = window.location
         },
         error: (error) => {
           alert('create code : error')
+          window.location = window.location
+
         }
       })
 
@@ -132,12 +156,21 @@
         data: activity_form.serialize(),
         success: (data) => {
           alert('create activity : success')
+          window.location = window.location
+
         },
         error: (error) => {
           alert('create activity : error')
+          window.location = window.location
+
         }
       })
 
+      $('select').formSelect();
+      $(".sidenav").sidenav();
+      $(".datepicker").datepicker({});
+      $(".timepicker").timepicker({});
+      $(".tabs").tabs();
     })
   </script>
 </body>
