--- a/manage/templates/manage/display.html
+++ b/manage/templates/manage/display.html
@@ -26,10 +26,7 @@
             </div>
         </div>
     </nav>
-    <div class="custom-control custom-switch">
-        <input type="checkbox" class="custom-control-input" id="customSwitch1">
-        <label class="custom-control-label" for="customSwitch1"></label>
-    </div>
+
     <section name="table">
         <table class="table table-hover">
             <thead>
@@ -46,7 +43,7 @@
                 {%for data in datas %}
                 <tr>
                     <th scope="row">{{ forloop.counter }} </th>
-                    <td>{{data.name}}</td>
+                    <td>{{data.atvname}}</td>
                     <td>{{data.date}}</td>
                     <td>{{data.place}}</td>
                     <td>{{data.code_set.count}}</td>
@@ -55,7 +52,7 @@
                         <div class="custom-control custom-switch">
                             <input type="checkbox" class="custom-control-input" {%if data.status %} checked {% endif %}
                                 id="switch-{{forloop.counter }}" onchange=" onStatusChange(this)"
-                                data-atvcode="{{data.atvcode}}">
+                                data-atvname="{{data.atvname}}">
                             <label class="custom-control-label" for="switch-{{forloop.counter }}"></label>
                         </div>
                     </td>
@@ -80,7 +77,7 @@
     <script>
         function onStatusChange(e) {
             // TODO : Make an api to update database value
-            console.log($(e).data('atvcode'));
+            console.log($(e).data('atvname'));
 
         }
     </script>
