--- a/manage/templates/manage/create.html
+++ b/manage/templates/manage/create.html
@@ -40,27 +40,116 @@
     <li><a href="#">ข่าวสาร</a></li>
     <li><a href="#">การตั้งค่า</a></li>
   </ul>
-  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active" href="{% url 'create'%}">Create </a>
-        <a class="nav-item nav-link" href="{% url 'display'%}">Display</a>
-        <a class="nav-item nav-link" href="#">Messages</a>
-        <a class="nav-item nav-link" href="#">Settings</a>
+  <section class="section container" id="services">
+    <div class="row">
+      <div class="card col s8 offset-s2  ">
+        <!-- tabs -->
+        <ul class="tabs">
+          <li class="tab col s6">
+            <a href="#photography" class="active indigo-text text-darken-4">สร้างโค้ดกิจกรรม</a>
+          </li>
+          <li class="tab col s6">
+            <a href="#editing" class="indigo-text text-darken-4">เพิ่มรายชื่อกิจกรรม</a>
+          </li>
+        </ul>
+        <div id="photography" class="col s12">
 
+          <div class="card-item white lighten-1">
+            <section name="code" class="section container">
+              <p class="flow-text center-align">
+                <span class="card-title indigo-text"><i class="material-icons">edit</i>สร้างโค้ดกิจกรรม</span>
+              </p>
+              <form action="{%url 'create_code'%}" method="post" id="code-form" class="row  justify-content-center">
+
+                <div class="input-field">
+                  <select name="atvname">
+                    {%for data in datas %}
+                    <option value="{{data.atvname}}">{{data.atvname}}</option>
+                    {%endfor%}
+
+                  </select>
+                  <label for="atvname">กิจกรรม</label>
+                </div>
+                <div class="input-field">
+                  <input type="text" class="form-control" name="prefix" id="prefix" />
+                  <label for="prefix">คำนำหน้า</label>
+                </div>
+                <div class="input-field">
+                  <input type="number" class="form-control" name="amount" id="amount" />
+                  <label for="amount">จำนวนโค้ดที่จะสร้าง</label>
+                </div>
+
+                <div class="input-field">
+                  <input type="number" class="form-control" name="length" id="length" />
+                  <label for="length">ความยาวของโค้ด</label>
+                </div>
+
+                <div class="input-field">
+                  <input type="number" step="0.01" class="form-control" name="point" id="point" />
+                  <label for="point">จำนวนหน่วยกิต</label>
+                </div>
+
+                <!-- <div class="input-field "> -->
+                <!-- <input type="text" class="datepicker" name="exp" id="exp" /> -->
+                <label for="exp">วันหมดอายุ</label>
+                <input type="date" name="exp" id="exp" />
+
+                <!-- </div> -->
+
+
+                <div class="center-align">
+                  <button class="btn waves-effect waves-light" type="submit">submit <i
+                      class="material-icons right">send</i></button>
+                </div>
+
+
+              </form>
+            </section>
+          </div>
+        </div>
+        <section id="editing" class="col s12">
+          <section class="card-item white">
+            <section name="activity" class="section container">
+              <p class="flow-text center-align indigo-text">
+                <i class="material-icons">note_add</i> เพิ่มรายการกิจกรรม
+              </p>
+              <form action="{%url 'create_activity'%}" method="post" id="activity-form"
+                class="row  justify-content-center">
+
+                <div class="input-field">
+                  <label for="atvname">ชื่อกิจกรรม</label>
+                  <input type="text" class="form-control" name="atvname" id="atvname" />
+                </div>
+
+                <div class="input-field">
+                  <label for="place">สถานที่จัด</label>
+                  <input type="text" class="form-control" name="place" id="place" />
+                </div>
+
+                <!-- <div class="input-field "> -->
+                <label for="exp">วันเวลาที่จัด</label>
+                <input type="datetime-local" name="exp" id="exp" />
+                <!-- </div> -->
+
+
+
+                <div class="center-align">
+                  <button class="btn waves-effect waves-light">submit <i class="material-icons right">send</i></button>
+                </div>
+              </form>
+            </section>
+          </section>
       </div>
     </div>
-  </nav> -->
-  <section name="code" class=" bg-light p-5 m-0">
+    </div>
+  </section>
+
+
+  <!-- <section name="code" class=" bg-light p-5 m-0">
     <p class="lead text-muted">สร้างโค้ดลงฐานข้อมูล</p>
     <form action="{%url 'create_code'%}" method="post" id="code-form" class="row  justify-content-center">
       <div class="mt-3 col-8">
         <label for="atvname">กิจกรรม</label>
-        <!-- <input type="text" class="form-control" name="atvname"> -->
         <select name="atvname">
           {%for data in datas %}
           <option value="{{data.atvname}}">{{data.atvname}}</option>
@@ -96,8 +185,8 @@
       </div>
 
     </form>
-  </section>
-  <section name="activity" class=" p-5 m-0">
+  </section> -->
+  <!-- <section name="activity" class=" p-5 m-0">
     <p class="lead text-muted">สร้างกิจกรรมลงฐานข้อมูล</p>
     <form action="{%url 'create_activity'%}" method="post" id="activity-form" class="row  justify-content-center">
 
@@ -120,13 +209,18 @@
 
 
     </form>
-  </section>
+  </section> -->
 
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     const code_form = $('#code-form')
     const activity_form = $('#activity-form')
+    $('select').formSelect();
+    $(".sidenav").sidenav();
+    $(".datepicker").datepicker({});
+    $(".timepicker").timepicker({});
+    $(".tabs").tabs();
 
     code_form.submit((e) => {
       e.preventDefault()
@@ -166,11 +260,7 @@
         }
       })
 
-      $('select').formSelect();
-      $(".sidenav").sidenav();
-      $(".datepicker").datepicker({});
-      $(".timepicker").timepicker({});
-      $(".tabs").tabs();
+
     })
   </script>
 </body>
