--- a/client/templates/client/home2.html
+++ b/client/templates/client/home2.html
@@ -392,7 +392,7 @@
   </script>
 
   <script>
-    var url = "http://www.kku.ac.th/ikku/api/activities/services/topActivity.php";
+    var url = "https://www.kku.ac.th/ikku/api/activities/services/topActivity.php";
     fetch(url).then(function(result) {
       return result.json();
     }).then(function(data) {
