--- a/manage/templates/manage/create.html
+++ b/manage/templates/manage/create.html
@@ -93,7 +93,7 @@
                 <!-- </div> -->
 
 
-                <div class="center-align">
+                <div class="center-align" style="margin-top: 24px;">
                   <button class="btn waves-effect waves-light" type="submit">submit <i
                       class="material-icons right">send</i></button>
                 </div>
