--- a/manage/templates/manage/create.html
+++ b/manage/templates/manage/create.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>CCM-manage</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -129,7 +129,7 @@
 
 
 
-                <div class="center-align">
+                <div class="center-align" style="margin-top: 24px;">
                   <button class="btn waves-effect waves-light">submit <i class="material-icons right">send</i></button>
                 </div>
               </form>
