'add-more-qrcode-link'

--- a/manage/templates/manage/display.html
+++ b/manage/templates/manage/display.html
@@ -84,6 +84,7 @@
                                     CODE</a>
                                 <a href="http://{{url}}/api/user/get-csv?atvname={{data.atvname}}"
                                     style="display:block;">Download directly</a>
+                                <p>Access directly at : http://{{url}}/api/user/get-csv?atvname={{data.atvname}} </p>
 
                             </div>
                         </div>
