'add-getcode-api'

--- a/manage/templates/manage/display.html
+++ b/manage/templates/manage/display.html
@@ -88,6 +88,8 @@
                                 <hr>
                                 <h3>Activity code </h3>
                                 <a href="http://{{url}}/api/user/get-atvcode?atvname={{data.atvname}}"
+                                    style="display:block;">Get JSON</a>
+                                <a href="http://{{url}}/api/user/get-atvcode-csv?atvname={{data.atvname}}"
                                     style="display:block;">Download code csv</a>
 
                             </div>
